--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,43 +1,27 @@
 <!--index.wxml-->
-<view class="container">
+<scroll-view class="container">
 
-  <!-- 用户 openid -->
-  <view class="userinfo">
-    <button 
-      open-type="getUserInfo" 
-      bindgetuserinfo="onGetUserInfo"
-      class="userinfo-avatar"
-      style="background-image: url({{avatarUrl}})"
-    ></button>
-    <view>
-      <button class="userinfo-nickname" bindtap="onGetOpenid">点击获取 openid</button>
+<!--搜索框-->
+<view class="container_search">
+
+<!-- 没有获取到焦点时 -->
+  <view class='search_label'>
+     <icon type="search" size="15"></icon>
+  <text class='search_label_text'>搜索</text>
+  </view>
+  <!-- 获取到焦点后 -->
+
+  <view class='search'>
+    <view class='search_form'>
+      <icon class='search_icon_search' type='search' size='15'></icon>
+      <input class='search_input' placeholder='请输入关键词'></input>
+      <icon class='search_icon_cancel' type='cancel' size='15' color='black'></icon>
     </view>
+    <text class='search_btn_search'>搜索</text>
   </view>
-
-
-  <!-- 上传图片 -->
-  <view class="uploader">
-    <view class="uploader-text" bindtap="doUpload">
-      <text>上传图片</text>
-    </view>
-    <view class="uploader-container" wx:if="{{imgUrl}}">
-      <image class="uploader-image" src="{{imgUrl}}" mode="aspectFit" bindtap="previewImg"></image>
-    </view>
-  </view>
-
-
-  <!-- 操作数据库 -->
-  <view class="uploader">
-    <navigator url="../databaseGuide/databaseGuide" open-type="navigate" class="uploader-text">
-      <text>前端操作数据库</text>
-    </navigator>
-  </view>
-
-  <!-- 新建云函数 -->
-  <view class="uploader">
-    <navigator url="../addFunction/addFunction" open-type="navigate" class="uploader-text">
-      <text>快速新建云函数</text>
-    </navigator>
-  </view>
-
+ 
 </view>
+
+<!--广告位 -->
+
+</scroll-view>
