同城 搜索框 完成
搜索框完成 隐藏 显示 获取输入内容等

--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -138,16 +138,26 @@ page {
 
 /* custom style*/
 
+/* 顶部输入 模块 */
+.container_search{
+  position: relative;
+  width: 100%;
+   height: 80rpx;
+}
+
 /*搜索框没有点击时的样式*/
 .search_label{
+  position: absolute;
   display: flex;
   background-color: white;
-  margin-bottom: 10rpx;
   border-radius: 5%;
   align-content: center;
   justify-content: center;
   align-items: center;
-  height: 80rpx;
+
+  width: 100%;
+  height: 100%;
+  
 }
 
 /*搜索框没有获取到焦点时的 搜索 文字*/
@@ -158,21 +168,24 @@ page {
 
 /* 搜索框获取到焦点时 */
 .search{
-  display: flex;
+  width: 100%;
+  display: none;
   flex-direction: row;
   height: 80rpx;
   align-items: center;
+  top: 0px;
 }
 /* 输入框及左右两边 icon 的 容器*/
 .search_form{
   display: flex;
   background-color: white;
-  width: 80%;
+
   height: 100%;
   border-radius: 5%;
   align-items: center;
   padding-left: 20rpx;
   padding-right: 20rpx;
+  flex: 1;
 }
 /* 输入框左边的 搜索 icon  */
 .search_icon_search{
@@ -180,11 +193,20 @@ page {
 }
 /* 搜索输入框 */
 .search_input{
-  width: 85%;
+  flex: 1;
+  margin-right: 5rpx;
 }
 /* 搜索那两个字 */
 .search_btn_search{
   margin-left: 20rpx;
+  margin-right: 10rpx;
   font-size: 35rpx;
   color:aqua;
+}
+
+.search-focus{
+  display: flex;
+}
+.search-blur{
+  display: none;
 }
