--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -4,22 +4,24 @@
 <!--搜索框-->
 <view class="container_search">
 
-<!-- 没有获取到焦点时 -->
-  <view class='search_label'>
+
+  <!-- 获取到焦点后 -->
+
+  <view class='{{ class_search }} search'>
+    <view class='search_form'>
+      <icon class='search_icon_search' type='search' size='15'></icon>
+      <input class='search_input' placeholder='请输入关键词' focus='{{queryFocus}}' bindinput='inputQuery' bindblur='queryBlur'  value='{{queryInput}}'></input>
+      <icon class='search_icon_cancel' type='cancel' size='15' color='black' bindtap='hideSearch'></icon>
+    </view>
+    <text class='search_btn_search' bindtap='query'>搜索</text>
+  </view>
+ 
+
+ <!-- 没有获取到焦点时 -->
+  <view class='{{ class_search_label }}search_label' bindtap='showSearch'>
      <icon type="search" size="15"></icon>
   <text class='search_label_text'>搜索</text>
   </view>
-  <!-- 获取到焦点后 -->
-
-  <view class='search'>
-    <view class='search_form'>
-      <icon class='search_icon_search' type='search' size='15'></icon>
-      <input class='search_input' placeholder='请输入关键词'></input>
-      <icon class='search_icon_cancel' type='cancel' size='15' color='black'></icon>
-    </view>
-    <text class='search_btn_search'>搜索</text>
-  </view>
- 
 </view>
 
 <!--广告位 -->
