--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -203,10 +203,86 @@ page {
   font-size: 35rpx;
   color:aqua;
 }
-
+/* 获取到焦点时 显示*/
 .search-focus{
   display: flex;
 }
+/* 失去焦点就隐藏*/
 .search-blur{
   display: none;
 }
+/* 
+
+      广告模块
+
+ */
+
+#container-ad{
+  width:100%;
+  height:150px;
+  position: relative;
+  margin-top: 10rpx;
+  margin-bottom: 15rpx;
+
+}
+.image-ad{
+  width:100%;
+  height:100%;
+}
+#text-ad{
+  position: absolute;
+  right:10rpx;
+  bottom: 10rpx;
+  color:white;
+}
+
+/* 频道 */
+
+#container-channel{
+  width: 100%;
+  height: 400rpx;
+}
+
+/* 频道 swapper */
+#swiper-channel{
+   width:100%;
+  height:100%;
+  margin: 10rpx;
+}
+/* 频道页 */
+.container-swiper-page{
+  width:100%;
+  height:100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/* 频道行 */
+.container-channel-row{
+  width: 90%;
+  height: 95%;
+  flex:1;
+  display: flex;
+  flex-direction: row;
+}
+
+/* 频道块 */
+.container-channel-real{
+  flex: 1;
+  padding:10rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+/* 频道图标 */
+.image-channel{
+  flex: 1;
+  width: 100%;
+}
+
+/* 频道文字 */
+.text-channel{
+  color:#0063ce;
+  font-size: 20rpx;
+}
+
