--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -5,6 +5,7 @@ page {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  color: #707070;
 }
 
 .userinfo, .uploader, .tunnel {
@@ -141,8 +142,9 @@ page {
 /* 顶部输入 模块 */
 .container_search{
   position: relative;
-  width: 100%;
+  
    height: 80rpx;
+   margin: 15rpx;
 }
 
 /*搜索框没有点击时的样式*/
@@ -218,11 +220,9 @@ page {
  */
 
 #container-ad{
-  width:100%;
   height:150px;
   position: relative;
-  margin-top: 10rpx;
-  margin-bottom: 15rpx;
+  margin: 15rpx;
 
 }
 .image-ad{
@@ -247,12 +247,11 @@ page {
 #swiper-channel{
    width:100%;
   height:100%;
-  margin: 10rpx;
 }
 /* 频道页 */
 .container-swiper-page{
   width:100%;
-  height:100%;
+  height:90%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -277,12 +276,51 @@ page {
 /* 频道图标 */
 .image-channel{
   flex: 1;
-  width: 100%;
+  width: 90%;
+  padding: 10rpx;
 }
 
 /* 频道文字 */
 .text-channel{
   color:#0063ce;
-  font-size: 20rpx;
+  font-size: 25rpx;
 }
+.class-background-white{
+  background-color: white;
+}
+/* 频道下面的间隔县 */
+#interval-line{
+  width: 100%;
+  height: 2rpx;
+  background-color: #707070;
+}
+
+/* 频道下面的 各个计数 */
+#container-num{
+  display: flex;
+  padding: 10rpx;
+  justify-content: flex-end;
+  
+}
+#text-num{
+  font-size: 30rpx;
+}
+
+/* 内容类型 */
+
+#container-type{
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20rpx;
+  margin-top: 20rpx;
+  padding: 15rpx;
+  font-size: 30rpx;
+  justify-content: space-around;
+}
+
+.selected-text{
+  color: #06d85dad;
+
+}
+
 
