增加内容类型
内容类型

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <!--index.wxml-->
-<scroll-view class="container">
+<scroll-view class="container" scroll-y bindscroll='scroll' bindscrolltoupper='bindscrolltoupper' bindscrolltolower='bindscrolltolower'>
 
   <!--搜索框-->
   <view class="container_search">
@@ -75,27 +75,30 @@
   </view>
 
 <!-- 内容类型 -->
+<view class='container-type class-background-white'>
 
-<view id='container-type' class='class-background-white'>
-
-  <view class='box-type'>
-    <text class='text-type'>最新发布</text>
+  <view class='box-type' data-type='publish' bindtap='bindTypeTap' >
+    <text class='text-type {{contenTypeNewestPublish}}'>最新发布</text>
   </view>
 
 
-  <view class='box-type'>
-    <text class='text-type'>最新回复</text>
+  <view class='box-type' data-type='reply' bindtap='bindTypeTap'>
+    <text class='text-type {{contentTypeNewestReply}}'>最新回复</text>
   </view>
 
 
-  <view class='box-type'>
-    <text class='text-type'>最多点赞</text>
+  <view class='box-type' data-type='zan' bindtap='bindTypeTap'>
+    <text class='text-type {{contentTypeMostZan}}'>最多点赞</text>
   </view>
 
 
-  <view class='box-type'>
-    <text class='text-type'>最多分享</text>
+  <view class='box-type' data-type='share' bindtap='bindTypeTap'>
+    <text class='text-type {{contentTypeMostShare}}'>最多分享</text>
   </view>
+
+</view>
+
+<view class='class-background-white container-content'>
 
 </view>
 
