--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -143,7 +143,7 @@ page {
 .container_search{
   position: relative;
   
-   height: 80rpx;
+   height: 60rpx;
    margin: 15rpx;
 }
 
@@ -308,7 +308,7 @@ page {
 
 /* 内容类型 */
 
-#container-type{
+.container-type{
   display: flex;
   flex-direction: row;
   margin-bottom: 20rpx;
@@ -319,8 +319,11 @@ page {
 }
 
 .selected-text{
-  color: #06d85dad;
+  color: #06d8b5ad;
 
 }
 
-
+/* 内容 */
+.container-content{
+  height: 300rpx;
+}
