--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -4,6 +4,11 @@
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
- 
+ height: 100%;
+  width: 100%;
   background-color: #F2F2F2;
 } 
+
+page{
+  height: 100%;
+}
