--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -8,27 +8,32 @@ page {
   height: 100%;
   position: relative;
 }
+
 /* 顶部悬浮的 内容类型导航 */
-.container-type-top{
+
+.container-type-top {
   width: 100%;
   position: fixed;
   z-index: 99;
-} 
+}
 
-  #scroll{
-    flex :1;
-    height: 100%;
-    width: 100%;
-  }
+#scroll {
+  flex: 1;
+  height: 100%;
+  width: 100%;
+}
+
 /* 顶部输入 模块 */
-.container_search{
+
+.container_search {
   position: relative;
-   height: 40px;
-   margin: 8px;
+  height: 40px;
+  margin: 8px;
 }
 
 /*搜索框没有点击时的样式*/
-.search_label{
+
+.search_label {
   position: absolute;
   display: flex;
   background-color: white;
@@ -36,20 +41,20 @@ page {
   align-content: center;
   justify-content: center;
   align-items: center;
-
   width: 100%;
   height: 100%;
-  
 }
 
 /*搜索框没有获取到焦点时的 搜索 文字*/
-.search_label_text{
+
+.search_label_text {
   font-size: 35rpx;
   margin-left: 5rpx;
 }
 
 /* 搜索框获取到焦点时 */
-.search{
+
+.search {
   width: 100%;
   display: none;
   flex-direction: row;
@@ -57,11 +62,12 @@ page {
   align-items: center;
   top: 0px;
 }
+
 /* 输入框及左右两边 icon 的 容器*/
-.search_form{
+
+.search_form {
   display: flex;
   background-color: white;
-
   height: 100%;
   border-radius: 5%;
   align-items: center;
@@ -69,203 +75,173 @@ page {
   padding-right: 20rpx;
   flex: 1;
 }
+
 /* 输入框左边的 搜索 icon  */
-.search_icon_search{
+
+.search_icon_search {
   margin-right: 10rpx;
 }
+
 /* 搜索输入框 */
-.search_input{
+
+.search_input {
   flex: 1;
   margin-right: 5rpx;
 }
+
 /* 搜索那两个字 */
-.search_btn_search{
+
+.search_btn_search {
   margin-left: 20rpx;
   margin-right: 10rpx;
   font-size: 35rpx;
-  color:aqua;
+  color: aqua;
 }
+
 /* 获取到焦点时 显示*/
-.search-focus{
+
+.search-focus {
   display: flex;
 }
+
 /* 失去焦点就隐藏*/
-.search-blur{
+
+.search-blur {
   display: none;
 }
+
 /* 
 
       广告模块
 
  */
 
-#container-ad{
-  height:150px;
+#container-ad {
+  height: 150px;
   position: relative;
   margin: 15rpx;
+}
 
+.image-ad {
+  width: 100%;
+  height: 100%;
 }
-.image-ad{
-  width:100%;
-  height:100%;
-}
-#text-ad{
+
+#text-ad {
   position: absolute;
-  right:10rpx;
+  right: 10rpx;
   bottom: 10rpx;
-  color:white;
+  color: white;
 }
 
 /* 频道 */
 
-#container-channel{
+#container-channel {
   width: 100%;
   height: 200px;
 }
 
 /* 频道 swapper */
-#swiper-channel{
-   width:100%;
-  height:100%;
+
+#swiper-channel {
+  width: 100%;
+  height: 100%;
 }
+
 /* 频道页 */
-.container-swiper-page{
-  width:100%;
-  height:90%;
+
+.container-swiper-page {
+  width: 100%;
+  height: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 /* 频道行 */
-.container-channel-row{
+
+.container-channel-row {
   width: 90%;
   height: 95%;
-  flex:1;
+  flex: 1;
   display: flex;
   flex-direction: row;
 }
 
 /* 频道块 */
-.container-channel-real{
+
+.container-channel-real {
   flex: 1;
-  padding:10rpx;
+  padding: 10rpx;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 /* 频道图标 */
-.image-channel{
+
+.image-channel {
   flex: 1;
   width: 90%;
   padding: 10rpx;
 }
 
 /* 频道文字 */
-.text-channel{
-  color:#0063ce;
+
+.text-channel {
+  color: #0063ce;
   font-size: 25rpx;
 }
-.class-background-white{
+
+.class-background-white {
   background-color: white;
 }
+
 /* 频道下面的间隔县 */
-#interval-line{
+
+#interval-line {
   width: 100%;
   height: 2rpx;
   background-color: #707070;
 }
 
 /* 频道下面的 各个计数 */
-#container-num{
+
+#container-num {
   display: flex;
   padding: 8px;
   justify-content: flex-end;
-  
 }
-#text-num{
+
+#text-num {
   font-size: 15px;
 }
 
 /* 内容类型 */
 
-.container-type{
+.container-type {
   display: flex;
   flex-direction: row;
-  
   padding: 15rpx;
   font-size: 30rpx;
   width: 100%;
   justify-content: space-around;
 }
-.container-type-include{
-  margin-top:10px;
-  margin-bottom: 10px;
-}
-.selected-text{
-  color: #06d8b5ad;
 
-}
-
-
-/* 内容 */
-.container-content{
+.container-type-include {
   margin-top: 10px;
   margin-bottom: 10px;
-  padding: 5px;
-  align-items: center;
-  justify-content: center;
 }
 
-/* 内容-上部-人 */
-.container-content-person{
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  
-}
-/* 头像 */
-.content-person-image{
-  width: 40px;
-  height: 40px;
+.selected-text {
+  color: #06d8b5ad;
 }
 
-/* 用户名 容器*/
-.container-profile{
-  flex: 1;
+/* 内容 */
+@import 'contentRecordTemplate.wxss';
+
+#container-record{
   display: flex;
   flex-direction: column;
-  margin-left: 5px;
-  margin-right: 5px;
+  width: 100%;
 }
-/* 用户名 */
-/* 文本溢出显示省略号 （要指定宽度或高度）
-  overflow: hidden;
-  text-overflow: ellipsis;
-white-space: nowrap;
- */
-.text-person-name{
-  font-size: 18px;
-  font-weight: bold;
-  color: black;
-  width: 60%;
-  display: inline-block;
-  overflow: hidden;
-  text-overflow: ellipsis;
-white-space: nowrap;
-}
-/* 发布日期 */
-.text-time{
-  font-size: 12px;
-}
-/* 联系 按钮 */
-.text-person-contact{
-  border: 1px red solid;
-  border-radius: 2px;
-  padding: 3px 10px 3px 10px;
-  font-size: 10px;
-  display: inline-block;
-  margin: 5px;
-  height: 80%;
-  color: red;
-}
-
