--- a/miniprogram/pages/publish/publish.wxss
+++ b/miniprogram/pages/publish/publish.wxss
@@ -12,7 +12,6 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  background-color: green;
   align-items: center;
 }
 
@@ -23,7 +22,6 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-color: gainsboro;
   padding: 5px;
 }
 /* 单个功能方块 */
@@ -44,24 +42,52 @@
   font-size: 15px;
 }
 
-#container-channels{
-  background-color: red;
-  opacity: 0.5;
+/* 频道菜单容器 */
+.container-menu{
+  position: absolute;
   width: 100%;
-  height: 200px;
-  
+  height: 100%;
+  top: 0;
+  display: flex;
+  flex-direction: column;
 }
 
+/* 频道菜单 */
+.container-channels{
+  opacity: 0.5;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  background-color: white;
+  z-index: 99;
+}
+/* 遮罩层 */
 .shade{
   background-color: black;
   opacity: 0.5;
-  position: absolute;
-  top:0px;
+  flex:1;
   width: 100%;
-  height: 100%;
-
+  z-index: 90;
 }
 
 .hide{
   display: none;
+}
+/* 频道 行 */
+.container-channel{
+  display: flex;
+  height: 50px;
+  width: 100%;
+  border-bottom: greenyellow 2px solid;
+  color: black;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+/* 取消 */
+.bottom-cancel{
+  border:none;
 }
